--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,21 @@
 name: cacao_app
-description: CORS Access-Control-Allow-Origin Proxy App
-version: 0.1.0
-homepage: https://github.com/michaelfig/cacao
+description: Cacao (CORS Access-Control-Allow-Origin) Proxy App
+version: 0.1.0-a1
+homepage: https://github.com/michaelfig/cacao_app
 author: Michael FIG <michael+cacao@fig.org>
 
 environment:
   sdk: '>=2.1.0-dev <3.0.0'
 
 dependencies:
-  cacao: ^0.2.0
+  cacao: ^0.3.0
 
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  #cupertino_icons: ^0.1.2
 
 dev_dependencies:
   test: ^1.0.0
